--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -40,17 +40,23 @@
 
 }
 
-.search-icon img {
-    max-width: 50%;
+.search-icon  {
+    max-width: 100%;
     height: auto;
   }
-  
+
+.search-icon img{
+  max-width: 50px;
+  height: 50px;
+}
 
 
   
 /* Weather image styling */
-.weather-image img {
-    max-width: 100px;    display: flex;
+.weather-image  {
+    display: flex;
+    margin-top: 129px;
+    justify-content: center;
 
   }
   
