--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -1,105 +1,145 @@
-.container{
-    width: 500px;
-    height: 600px;
-    margin: auto;
-    margin-top: 50px;
-    border-radius: 50px;
-    background-color: aqua;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.top-bar{
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    padding-top: 75px;
+body {
+  background: rgb(29,42,106);
+  color: #fff;
+  background: radial-gradient(circle, rgba(29,42,106,1) 0%, rgba(13,8,5,1) 100%);   font-family: 'Arial', sans-serif;
 }
 
-.top-bar input{
-    display: flex;
-    width: 100px;
-    height: 50px;
-    background: whitesmoke;
-    border: none;
-    outline: none;
-    border-radius: 25px;
-    padding-left: 45px;
-    color: rgb(101, 98, 94);
-    font-size: 20px;
-    font-weight: 400;
+/******Search bar************/
+.container p{
+  justify-content: center;
+  margin-top: 25px;
+  font-size: 45px;
+  font-weight: bold;
 }
 
-.search-icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100px;
-    width: 100px;
-    height: 100px;
-    background: whitesmoke;
-    cursor: pointer;
+.search_bar{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 75px; 
+  padding-left: 50px;
 
 }
-
-.search-icon  {
-    max-width: 100%;
-    height: auto;
-  }
-
-.search-icon img{
-  max-width: 50px;
+.top-bar input {
+  width: 450px;
   height: 50px;
+  background: whitesmoke;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  padding-left: 15px;
+  color: rgb(101, 98, 94);
+  font-size: 16px;
 }
 
+.search-icon {
+  width: 50px;
+  height: 50px;
+  background: whitesmoke;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
 
-  
-/* Weather image styling */
-.weather-image  {
-    display: flex;
-    margin-top: 129px;
-    justify-content: center;
+.search-icon img {
+  width: 25px;
+  height: 25px;
+}
+/*------CElcius--------------------------*/
+.temp_f{
+  margin-top: 150px;
+  margin-left: 0%;
+  justify-content: center;
 
-  }
-  
-  /* Weather temperature styling */
-  .weather-temp {
-    font-size: 24px;
-    margin-top: 10px;    display: flex;
+}
 
-  }
-  
-  /* Weather location styling */
-  .weather-location {
-    font-size: 18px;
-    margin-top: 5px;
-  }
-  
-  /* Data container styling */
-  .data-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-  }
-  
-  /* Individual data element styling */
-  .element {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  /* Data image styling */
-  .data img {
-    max-width: 40px;
-  }
-  
-  /* Data text styling */
-  .text {
-    margin-top: 5px;
-    font-size: 14px;
-  }
-  
-  /* Humidity and wind speed styling */
-  .humidity-percent {
-    font-size: 18px;
-    font-weight: bold;
-  }
+.weather-image {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  width: 175px;
+  height: 175px;
+  margin-left: 45%;
+}
+
+.weather-temp {
+  font-size: 24px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left:0%;
+
+}
+
+.weather-location {
+  font-size: 18px;
+  margin-top: 5px;
+  text-align: center;
+}
+.weather-info{
+  margin-left: 30px;
+  margin-top: 50px;
+}
+.weather-temp{
+  font-size: 25px;
+}
+
+.data-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-location{
+  font-size: 25px;
+}
+.element {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.data img {
+  max-width: 40px;
+}
+
+.text {
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+.humidity-percent {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.forecast-container {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 10px;
+  margin-top: 300px;
+  padding-bottom: 200px;
+}
+
+.forecast-item {
+  flex: 0 0 auto;
+  margin-right: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.map-container{
+  border-radius: 25px;
+  padding-bottom: 200px;
+  width: 100px;
+}
