--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -9,7 +9,6 @@ body {
   background: radial-gradient(circle, rgba(29,42,106,1) 0%, rgba(13,8,5,1) 100%);   font-family: 'Arial', sans-serif;
 }
 
-/******Search bar************/
 .container p{
   justify-content: center;
   margin-top: 25px;
@@ -122,20 +121,22 @@ body {
 
 .forecast-container {
   display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
   padding: 10px;
   margin-top: 100px;
   margin-bottom: 100px;
   color: black;
+  scrollbar-color: #02021b transparent;
+  scrollbar-width: 250px; 
+  margin-left: 25%;
+  overflow-y: auto;
+  margin-right: 25%;
 }
+
 
 .forecast-item {
   flex: 0 0 auto;
   margin-right: 10px;
   padding: 10px;
-  border: 1px solid #3c3737;
-  background-color: #fff;
   border-radius: 10px;
 }
 .map-container{
@@ -151,11 +152,7 @@ body {
   font-size: 25px;
   padding-top: 100px;
 }
-.forecast-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr); /* Adjust the number of columns as needed */
-  gap: 10px; /* Adjust the gap between columns */
-}
+
 .forecast-item {
   padding: 10px;
   text-align: center;
@@ -170,7 +167,6 @@ body {
 }
 
 
-/* Optional: Style individual elements within the forecast-item */
 .day {
   font-weight: bold;
 }
@@ -178,3 +174,16 @@ body {
 .temp, .description {
   padding: 10px;
 }
+.weather-image2{
+  width: 5px;
+  height: 5px;
+}
+
+.weather-image2 img{
+  width: 50px;
+  height: 50px;
+  background: rgba(218, 218, 51, 0.934);
+
+ }
+
+
