--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -32,7 +32,7 @@ body {
   outline: none;
   border-radius: 20px;
   padding-left: 15px;
-  color: rgb(101, 98, 94);
+  color: rgb(17, 15, 11);
   font-size: 16px;
 }
 
@@ -53,7 +53,7 @@ body {
 }
 /*------CElcius--------------------------*/
 .temp_f{
-  margin-top: 150px;
+  margin-top: 125px;
   margin-left: 0%;
   justify-content: center;
 
@@ -62,7 +62,7 @@ body {
 .weather-image {
   display: flex;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 20px;
   width: 175px;
   height: 175px;
   margin-left: 45%;
@@ -95,6 +95,9 @@ body {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
+}
+.current-date{
+  margin-top: 20px;
 }
 .weather-location{
   font-size: 25px;
@@ -148,7 +151,7 @@ body {
   justify-content: center;
 }
 .weakly{
-  color: aqua;
+  color: rgb(10, 33, 207);
   font-size: 25px;
   padding-top: 100px;
 }
